codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__unified_exec_footer__tests__render_many_sessions.snap
---
source: tui/src/bottom_pane/unified_exec_footer.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 50, height: 1 },
    content: [
        "  123 bg terminals: cmd 0 +122 more · /ps · /stop ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 49, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
